Closed Bug 1229290 Opened 9 years ago Closed 9 years ago

Uuid of characteristic and descriptor is in the wrong order when adding characteristics and descriptors using GATT server API

Categories

(Firefox OS Graveyard :: Bluetooth, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(firefox45 fixed)

RESOLVED FIXED
2.6 S2 - 12/4
Tracking Status
firefox45 --- fixed

People

(Reporter: yrliou, Assigned: yrliou)

References

Details

Attachments

(1 file, 1 obsolete file)

As same as GATT client API, we should pack and unpack UUIDs of attributes in a reversed order in GATT server API.
Currently only service uuid is pack/unpacked in the right order, this bug is to fix uuids of characteristic and descriptor.
Comment on attachment 8694037 [details] [diff] [review]
Bug 1229290: Pack/unpack UUIDs in a reverse order when adding characteristics and descriptors in GATT server API.

Review of attachment 8694037 [details] [diff] [review]:
-----------------------------------------------------------------

LGTM. Thanks for fixing this issue.
Attachment #8694037 - Flags: review?(brsun) → review+
https://hg.mozilla.org/mozilla-central/rev/271d65a7f58e
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → 2.6 S2 - 12/4
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: